# bigboard-cs50x

./: .env.EXAMPLE  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  benchmark.py  config.py  container.py  models.py  queue_worker.py  routes.py
app/static/: main.js  navbar.css  profile.js  register.js  styles.css  submit_page.css  submit_page.js  table_colors.js  tables.css
app/templates/: error.html  index.html  layout.html  leaderboard.html  login.html  profile.html  register.html  submit.html
speller/: Makefile  dictionary_speller50.c  docker_entry.sh  speller2.c
spellerMMM/: Makefile  dictionaries  dictionary.c  dictionary_WIP.c  dictionary_open_addressing.c  speller4.c  spellerMMM  texts
speller_Sanath/: Makefile  dictionary.c  dictionary50.h  speller4.c  spellerSanath
speller_other/: Makefile  comp.sh  dictionary_v7.c
speller_workspace/: benchmark_dictionary.c  benchmark_dictionary.h  dictionary50.c  dictionary50.h  docker_entry.sh  speller3.c  speller4.c
tests/: mock_database.py
